--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "exploratory",
-  "version": "1.0.0",
+  "name": "@larsw/exploratory",
+  "version": "0.1.0",
   "description": "An exploratory package",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -95,6 +95,7 @@
     }
   },
   "prettier": {
+    "tabWidth": 2,
     "singleQuote": true
   },
   "nyc": {
