--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@larsw/exploratory",
+  "name": "@larsw/exploratory2",
   "version": "0.1.1",
   "description": "An exploratory package",
   "main": "build/main/index.js",
